--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,14 @@
 <h1><%= @title %></h1>
 
 <a href="/?sort=desc">Sort Descending</a>
-<ol>
+<!-- <ol>
   <% @towns.each do |town| %>
     <li><a href="/towns/<%= town %>"><%= town %></a></li>
   <% end %>
+</ol> -->
+
+<ol id="town-list">
 </ol>
+
+<script src="/javascripts/index.js"
 
